--- a/ping/templates/main.html
+++ b/ping/templates/main.html
@@ -29,6 +29,45 @@
     </a>
 </nav>
 <main>
+    <fieldset class="match">
+        <legend class="victory">Victoire</legend>
+        <div class="information">
+            <span class="resume">Match joué le 28/10/2021 contre Dummy John</span>
+            <table class="results">
+                <thead>
+                <tr>
+                    <th>Joueurs</th>
+                    <th>Manche 1</th>
+                    <th>Manche 2</th>
+                    <th>Manche 3</th>
+                    <th>Manche 4</th>
+                    <th>Manche 5</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td class="joueur win">Moi</td>
+                    <td class="win round">11</td>
+                    <td class="lose round">09</td>
+                    <td class="win round">11</td>
+                    <td class="win round">11</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td class="joueur lose">Dummy John</td>
+                    <td class="lose round">07</td>
+                    <td class="win round">11</td>
+                    <td class="lose round">08</td>
+                    <td class="lose round">06</td>
+                    <td></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="commentary">
+            "J'ai eu une chance monstrueuse sur cette partie."
+        </div>
+    </fieldset>
 
 </main>
 </body>
