--- a/ping/static/styles/main.css
+++ b/ping/static/styles/main.css
@@ -1,9 +1,9 @@
 :root {
-    --background-color: #646C79;
-    --main-color: #1F3044;
+    --background-color: #373A43;
+    --main-color: #262930;
     --font-color: white;
-    --font-color-win: #39A4FB;
-    --font-color-lose: #F86368;
+    --font-color-win: #469BBA;
+    --font-color-lose: #E07F6E;
     font-family: Verdana;
 }
 
@@ -18,7 +18,6 @@ Barre de navigation
 nav {
     top: 0;
     left: 0;
-    overflow-x: hidden;
     width: 200px;
     height: 100%;
     position: fixed;
@@ -47,7 +46,12 @@ nav a:first-of-type {
 }
 
 nav a:not(first-of-type) {
-    padding-top: 40px;
+    padding: 20px 0px;
+}
+
+nav a:not(first-of-type):hover {
+    background: rgb(42, 64, 77);
+    border-right: solid 5px var(--font-color-win);
 }
 
 @media screen and (max-height: 685px) {
@@ -131,7 +135,23 @@ main {
     padding-left: 20px;
 }
 
-@media screen and (max-width: 800px) {
+.card {
+    padding: 20px;
+}
+
+.card-title {
+    background: var(--main-color);
+    text-align: center;
+    border-radius: 10px;
+    padding: 10px;
+
+}
+
+.card-body {
+    padding: 20px 40px;
+}
+
+@media screen and (max-width: 900px) {
     .match {
         flex-direction: column;
     }
