--- a/ping/templates/notes/notes.html
+++ b/ping/templates/notes/notes.html
@@ -1,1 +1,9 @@
 {% extends "main.html" %}
+{% block content %}
+    <section class="card">
+        <h1 class="card-title">Mes notes</h1>
+        <section class="card-body">
+
+        </section>
+    </section>
+{% endblock %}
