--- a/ping/templates/main.html
+++ b/ping/templates/main.html
@@ -11,20 +11,40 @@
     <a href="">
         <img src="{% static 'assets/table-tennis-solid.svg' %}" alt="Logo de l'application Ping Tracker"/>
     </a>
-    <a href="">
-        <img src="{% static 'assets/chart-line-solid.svg' %}" alt="Logo du dashboard"/>
+    <a href="" class="link">
+        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chart-line"
+             class="svg-inline--fa fa-chart-line fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+             viewBox="0 0 512 512">
+            <path fill="#FFFFFF"
+                  d="M496 384H64V80c0-8.84-7.16-16-16-16H16C7.16 64 0 71.16 0 80v336c0 17.67 14.33 32 32 32h464c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16zM464 96H345.94c-21.38 0-32.09 25.85-16.97 40.97l32.4 32.4L288 242.75l-73.37-73.37c-12.5-12.5-32.76-12.5-45.25 0l-68.69 68.69c-6.25 6.25-6.25 16.38 0 22.63l22.62 22.62c6.25 6.25 16.38 6.25 22.63 0L192 237.25l73.37 73.37c12.5 12.5 32.76 12.5 45.25 0l96-96 32.4 32.4c15.12 15.12 40.97 4.41 40.97-16.97V112c.01-8.84-7.15-16-15.99-16z"></path>
+        </svg>
         <span>Dashboard</span>
     </a>
-    <a href="">
-        <img src="{% static 'assets/plus-circle-solid.svg' %}" alt="Logo de la page d'ajout d'une rencontre"/>
+    <a href="" class="link">
+        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus-circle"
+             class="svg-inline--fa fa-plus-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+             viewBox="0 0 512 512">
+            <path fill="#FFFFFF"
+                  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path>
+        </svg>
         <span>Ajouter une rencontre</span>
     </a>
-    <a href="notes">
-        <img src="{% static 'assets/sticky-note-regular.svg' %}" alt="Logo de la page des notes de l'entraîneur"/>
-        <span>Mes notes</span>
+    <a href="notes" class="link">
+        <svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="sticky-note"
+             class="svg-inline--fa fa-sticky-note fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
+             viewBox="0 0 448 512">
+            <path fill="#FFFFFF"
+                  d="M448 348.106V80c0-26.51-21.49-48-48-48H48C21.49 32 0 53.49 0 80v351.988c0 26.51 21.49 48 48 48h268.118a48 48 0 0 0 33.941-14.059l83.882-83.882A48 48 0 0 0 448 348.106zm-128 80v-76.118h76.118L320 428.106zM400 80v223.988H296c-13.255 0-24 10.745-24 24v104H48V80h352z"></path>
+        </svg>
+        <span>Notes</span>
     </a>
-    <a href="historique">
-        <img src="{% static 'assets/history-solid.svg' %}" alt="Logo de la page d'historique de nos rencontres"/>
+    <a href="historique" class="link">
+        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="history"
+             class="svg-inline--fa fa-history fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+             viewBox="0 0 512 512">
+            <path fill="#FFFFFF"
+                  d="M504 255.531c.253 136.64-111.18 248.372-247.82 248.468-59.015.042-113.223-20.53-155.822-54.911-11.077-8.94-11.905-25.541-1.839-35.607l11.267-11.267c8.609-8.609 22.353-9.551 31.891-1.984C173.062 425.135 212.781 440 256 440c101.705 0 184-82.311 184-184 0-101.705-82.311-184-184-184-48.814 0-93.149 18.969-126.068 49.932l50.754 50.754c10.08 10.08 2.941 27.314-11.313 27.314H24c-8.837 0-16-7.163-16-16V38.627c0-14.254 17.234-21.393 27.314-11.314l49.372 49.372C129.209 34.136 189.552 8 256 8c136.81 0 247.747 110.78 248 247.531zm-180.912 78.784l9.823-12.63c8.138-10.463 6.253-25.542-4.21-33.679L288 256.349V152c0-13.255-10.745-24-24-24h-16c-13.255 0-24 10.745-24 24v135.651l65.409 50.874c10.463 8.137 25.541 6.253 33.679-4.21z"></path>
+        </svg>
         <span>Historique</span>
     </a>
 </nav>
