--- a/ping/templates/main.html
+++ b/ping/templates/main.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <title>Ping Tracker</title>
     <link href="{% static 'styles/main.css' %}" type="text/css" rel="stylesheet">
+    <script src="https://d3js.org/d3.v4.js"></script>
 </head>
 <body>
 <nav>
-    <a href="">
+    <a href="dashboard">
         <img src="{% static 'assets/table-tennis-solid.svg' %}" alt="Logo de l'application Ping Tracker"/>
     </a>
-    <a href="" class="link">
+    <a href="dashboard" class="link">
         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chart-line"
              class="svg-inline--fa fa-chart-line fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
              viewBox="0 0 512 512">
