--- a/ping/templates/main.html
+++ b/ping/templates/main.html
@@ -21,7 +21,7 @@
         </svg>
         <span>Dashboard</span>
     </a>
-    <a href="" class="link">
+    <a href="add-match" class="link">
         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus-circle"
              class="svg-inline--fa fa-plus-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
              viewBox="0 0 512 512">
@@ -54,4 +54,13 @@
     {% endblock %}
 </main>
 </body>
+
+<script>
+    links = document.getElementsByClassName('link');
+    for (let i = 0; i < links.length; i++) {
+        if (links[i].href == window.location.href) {
+            links[i].classList.add('active-link');
+        }
+    }
+</script>
 </html>
