--- a/ping/templates/dashboard/donut_chart/donut_chart.html
+++ b/ping/templates/dashboard/donut_chart/donut_chart.html
@@ -38,9 +38,10 @@
         function createSVG() {
             svg = d3.select('.{{ id }}')
                 .append('svg')
-                .attr('width', width)
-                .attr('height', height)
-                .attr('class', 'ground');
+                .attr("width", '100%')
+                .attr("height", '100%')
+                .attr('viewBox', '0 0 ' + height + ' ' + width)
+                .attr('preserveAspectRatio', 'xMinYMin');
             pieChartG = svg.append('g')
                 .attr(
                     'transform',
