--- a/ping/static/styles/main.css
+++ b/ping/static/styles/main.css
@@ -86,7 +86,7 @@ main {
     margin-left: 200px;
 }
 
-.match {
+fieldset {
     background: var(--main-color);
     border-radius: 10px;
     border: none;
@@ -96,27 +96,29 @@ main {
     margin-bottom: 25px;
 }
 
-.match legend {
+fieldset legend {
     font-size: 36px;
     font-weight: 500;
     background: var(--background-color);
     border-radius: 10px;
+    padding-right: 7px;
+    padding-left: 7px;
 }
 
-.match .victory {
+fieldset .victory {
     color: var(--font-color-win);
 }
 
-.match .defeat {
+fieldset .defeat {
     color: var(--font-color-lose);
 }
 
-.match .resume {
+fieldset .resume {
     font-style: italic;
     font-size: 13px;
 }
 
-.match table {
+fieldset table {
     margin-top: 20px;
     font-size: 14px;
     width: 100%;
@@ -142,11 +144,11 @@ main {
     font-weight: 600;
 }
 
-.match .win {
+fieldset .win {
     color: var(--font-color-win);
 }
 
-.match .lose {
+fieldset .lose {
     color: var(--font-color-lose);
 }
 
@@ -168,7 +170,9 @@ main {
 
 .stats {
     width: fit-content;
+    max-width: 420px;
     padding: unset;
+    margin: auto;
 
 }
 
@@ -181,6 +185,11 @@ main {
 .stats .card-body {
     padding: 20px 80px;
     border: solid 1px var(--main-color);
+}
+
+fieldset .notes {
+    padding: 20px;
+    font-style: italic;
 }
 
 .card-title {
@@ -205,6 +214,41 @@ caption {
     margin-bottom: 10px;
 }
 
+.notes-container {
+    text-align: center;
+}
+
+.notes-container fieldset {
+    text-align: left;
+}
+
+button {
+    background: var(--main-color);
+    color: var(--font-color);
+    border: 2px solid var(--font-color);
+    border-radius: 5px;
+    padding: 14px 40px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+button:hover {
+    color: var(--font-color-win);
+    border-color: var(--font-color-win);
+}
+
+#form-container {
+    background: var(--main-color);
+    margin-top: 25px;
+    margin-bottom: 25px;
+    border-radius: 10px;
+}
+
+#form-container textarea {
+    width: 90%;
+    margin: 20px auto;
+}
 
 @media screen and (max-width: 1100px) {
     .match {
