--- a/ping/templates/main.html
+++ b/ping/templates/main.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <title>Ping Tracker</title>
     <link href="{% static 'styles/main.css' %}" type="text/css" rel="stylesheet">
+    <link rel="icon" href="{% static 'assets/icone.svg' %}"/>
     <script src="https://d3js.org/d3.v4.js"></script>
 </head>
 <body>
 <nav>
     <a href="dashboard">
-        <img src="{% static 'assets/table-tennis-solid.svg' %}" alt="Logo de l'application Ping Tracker"/>
+        <img src="{% static 'assets/logo.svg' %}" width="70%" alt="Logo de l'application Ping Tracker"/>
     </a>
     <a href="dashboard" class="link">
         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chart-line"
