--- a/ping/templates/main.html
+++ b/ping/templates/main.html
@@ -22,7 +22,7 @@
         </svg>
         <span>Dashboard</span>
     </a>
-    <a href="add-match" class="link">
+    <a href="match" class="link">
         <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus-circle"
              class="svg-inline--fa fa-plus-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
              viewBox="0 0 512 512">
