--- a/ping/templates/main.html
+++ b/ping/templates/main.html
@@ -9,7 +9,8 @@
     <script src="https://d3js.org/d3.v4.js"></script>
 </head>
 <body>
-<nav>
+
+<nav id="nav">
     <a href="dashboard">
         <img src="{% static 'assets/logo.svg' %}" width="70%" alt="Logo de l'application Ping Tracker"/>
     </a>
@@ -51,17 +52,36 @@
     </a>
 </nav>
 <main>
+    <header>
+        <img id="bars" src="{% static 'assets/bars-solid.svg' %}" onclick="displayNav()"/>
+    </header>
     {% block content %}
     {% endblock %}
 </main>
+
+
 </body>
 
 <script>
+    let navDisplayed = false;
     links = document.getElementsByClassName('link');
     for (let i = 0; i < links.length; i++) {
         if (links[i].href == window.location.href) {
             links[i].classList.add('active-link');
         }
+    }
+
+    function displayNav() {
+        if (!navDisplayed) {
+            document.getElementById('nav').classList.add('display');
+            document.getElementById('bars').classList.add('display-icon');
+            navDisplayed = true;
+        } else {
+            document.getElementById('nav').classList.remove('display');
+            document.getElementById('bars').classList.remove('display-icon');
+            navDisplayed = false;
+        }
+
     }
 </script>
 </html>
